# AI-Language-Helper

./: .gitignore  README.md  deploy.sh  test_backend.sh
.github/workflows/: deploy-backend.yml
Backend/: .dockerignore  Dockerfile  app.py  chatbot.py  db_utils.py  lambda_handler.py  language_mistakes.db  pyproject.toml  requirements.txt  serverless.yml  users.db
language-learning-frontend/: next.config.js  package-lock.json  package.json
language-learning-frontend/src/app/: layout.tsx  page.tsx
language-learning-frontend/src/app/(auth)/login/: page.tsx
language-learning-frontend/src/app/(auth)/register/: page.tsx
language-learning-frontend/src/app/(dashboard)/chat/: page.tsx
language-learning-frontend/src/app/(dashboard)/feedback/: page.tsx
language-learning-frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
language-learning-frontend/src/components/chat/: ChatInterface.tsx  SessionSetup.tsx
language-learning-frontend/src/components/feedback/: FeedbackDisplay.tsx
language-learning-frontend/src/components/layout/: Navbar.tsx
language-learning-frontend/src/context/: AuthContext.tsx  ChatContext.tsx
language-learning-frontend/src/lib/api/: api.ts
language-learning-frontend/src/types/: api.ts
