[project]
name = "ai-language-helper"
version = "0.1.0"
description = "Chatbots that helps people learn any language"
authors = [
    {name = "Akash",email = "akashkallai27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "langchain (>=0.3.21,<0.4.0)",

    "langchain-community (>=0.3.20,<0.4.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
